sudha/src/objects/Trail__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <label>Distance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experi__c</fullName>
        <label>Experi</label>
        <picklist>
            <picklistValues>
                <fullName>Fresher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experienced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Inspection_Date__c</fullName>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <label>Master</label>
        <referenceTo>Lookup__c</referenceTo>
        <relationshipLabel>Trails</relationshipLabel>
        <relationshipName>Trails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Years_oF_Exp__c</fullName>
        <label>Years oF Exp</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <label>Trail</label>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>